[package]
name = "omega-tile"
version = "0.1.0"
authors = ["Edwin Cheng <edwin@m-inverse.com>"]
edition = "2018"

[dependencies]
texture-synthesis = { git = "https://github.com/EmbarkStudios/texture-synthesis", rev = "00a92ec" }
indicatif = "0.12.0"
failure = "0.1.6"
sha2 = "0.8.0"
hex  = "0.4.0"
imageproc = "0.19.2"
structopt = "0.3.3"
rand = "0.7.2"
atty = "0.2.13"