[package]
name = "omega-tile-cli"
version = "0.1.0"
authors = ["Edwin Cheng <edwin@m-inverse.com>"]
edition = "2018"

[dependencies]
indicatif = "0.12.0"
texture-synthesis = { git = "https://github.com/EmbarkStudios/texture-synthesis", rev = "00a92ec" }
imageproc = "0.19.2"
structopt = "0.3.3"
rusttype = "0.8.1"
omega-tile = { path="../omega-tile" }